--- a/sys/__test/less/flexy-main.less
+++ b/sys/__test/less/flexy-main.less
@@ -48,11 +48,13 @@ header, footer {height:@flexy-header-height;}
 
 /* FORMS */
 label,button {text-transform:uppercase;}
+.form-group:hover {background-color:@gray-lighter;}
 .form-group>label {.make-sm-column(3)}
 .form-group>div {.make-sm-column(9)}
 .form-group.button-group>div {.make-sm-column(9);.make-sm-column-offset(3);}
 .form-inline .form-group {width:100%;}
 .form-inline .form-group>div {.make-sm-column-offset(3);}
+.help-block {margin:0px}
 
 /* GENERAL */
 .hidden {display:none;}
