--- a/sys/__test/less/bootstrap/mixins/grid.less
+++ b/sys/__test/less/bootstrap/mixins/grid.less
@@ -47,6 +47,7 @@
   @media (min-width: @screen-sm-min) {
     float: left;
     width: percentage((@columns / @grid-columns));
+    max-width: percentage((@columns / @grid-columns));
   }
 }
 .make-sm-column-offset(@columns) {
