- CHANGED: build.cfg default watch=FALSE (was 'dev') - CHANGED: formfields has now status classes (and style) - BUG: formfield requered class was not set
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@2835 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 6bcd5f3b70d47821346504d1e7080c9833f7e1ff
Former-commit-id: bfff963a035e62f1257f679053e2e1efa0621a79
Former-commit-id: d2ab882b56dbb396644aac69ba05c534f39ac794

--- a/site/assets/less-bootstrap/bootstrap.less
+++ b/site/assets/less-bootstrap/bootstrap.less
@@ -19,6 +19,11 @@ img {max-width:100%;}
 .error {color:@brand-warning;}
 .navbar li li {width:100%;}
 
+// Formulieren
+.form-group .alert {margin-right:1rem;}
+
 /* Hack voor dropdown in menu */
 li a.dropdown-toggle.disabled {margin-right: 30px;}
 li .dropdown-caret {position:absolute!important; top:0px;right:0px;}
+
+
