--- a/site/assets/css/layout.css
+++ b/site/assets/css/layout.css
@@ -1,159 +1,2 @@
-body {
-  background: #ddeeaa;
-}
-#container {
-  width: 98%;
-  max-width: 960px;
-  min-width: 300px;
-  background: #ffffff;
-  margin: 1rem auto;
-  border-radius: 10px;
-}
-#container > * {
-  width: 100%;
-}
-#header {
-  padding: 1rem;
-}
-#header h1 {
-  margin: 0;
-}
-#header h1 a {
-  text-decoration: none;
-}
-#menu {
-  width: 100%;
-  height: 1.9rem;
-  padding: 0px 0.5rem;
-  background-color: #669966;
-}
-#content {
-  min-height: 300px;
-  padding: 1rem;
-}
-#content img {
-  max-width: 100%;
-}
-#footer {
-  text-align: center;
-  background-color: #669966;
-  color: #ffffff;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-}
-#footer p {
-  padding: .5rem;
-}
-@media (max-width: 800px) {
-  html {
-    font-size: 14px;
-  }
-}
-@media (max-width: 480px) {
-  html {
-    font-size: 12px;
-  }
-  .menu ul {
-    float: left;
-    display: block;
-  }
-  .menu ul ul {
-    display: block;
-    margin-bottom: 0;
-  }
-  .menu ul ul ul {
-    margin-top: 0;
-    margin-left: 0;
-  }
-  .menu li:hover > ul {
-    position: static;
-    width: 100%;
-    margin: 0;
-  }
-  .menu li {
-    float: left;
-    clear: both;
-    display: block;
-  }
-  .menu li.lev2 a:before {
-    content: "> ";
-  }
-  .menu li.lev3 a:before {
-    content: ">> ";
-  }
-  .menu li.lev4 a:before {
-    content: ">>> ";
-  }
-  .menu li.lev5 a:before {
-    content: "..> ";
-  }
-  .menu li:hover {
-    position: static;
-  }
-  .menu a {
-    display: none;
-  }
-  .menu a.active {
-    background-color: #669966;
-    color: #ffffff;
-  }
-  .menu a:hover {
-    background-color: #ddeeaa;
-    color: #669966;
-  }
-  .menu a.current {
-    display: block;
-  }
-  .menu {
-    height: 1.8rem;
-    padding-top: 0 !important;
-    padding-bottom: 0 !important;
-    overflow: hidden;
-  }
-  .menu:hover {
-    height: auto;
-  }
-  .menu:hover ul ul {
-    margin-left: 1rem;
-  }
-  .menu:hover a {
-    display: block;
-  }
-  .menu:hover li a:before {
-    content: "";
-  }
-  .menu a.current:before {
-    content: "= ";
-  }
-  form label {
-    float: none;
-    width: 100%;
-  }
-  form fieldset span.error {
-    margin-top: -1.5rem;
-    max-width: 100%;
-  }
-  form input,
-  form textarea,
-  form select {
-    width: 100%;
-  }
-  form fieldset > div.checkbox label {
-    float: left;
-    width: auto;
-  }
-  form fieldset > div.checkbox input.checkbox {
-    float: left;
-    margin-left: 1rem;
-  }
-  form fieldset > div.radio > div {
-    margin-left: 0;
-    top: 0px;
-  }
-}
-@media (max-width: 320px) {
-  #container {
-    min-width: 320px;
-  }
-}
-/*# sourceMappingURL=data:application/json,%7B%22version%22%3A3%2C%22sources%22%3A%5B%22site%5C%2Fassets%5C%2Fless-default%5C%2Flayout.less%22%2C%22site%5C%2Fassets%5C%2Fless-default%5C%2Ftext.less%22%5D%2C%22names%22%3A%5B%5D%2C%22mappings%22%3A%22AAQA%3BEAAM%2CmBAAA%3B%3BAAEN%3BEACE%3BEACA%3BEACA%3BEACA%2CmBAAA%3BEACA%2CiBAAA%3BECsIiB%2CmBAAA%3B%3BADnInB%2CUAAW%3BEAAG%3B%3BAAEd%3BEAAS%3B%3BAACT%2COAAQ%3BEAAI%3B%3BAACZ%2COAAQ%2CGAAG%3BEAAG%3B%3BAAEd%3BEACE%3BEACA%3BEACA%2CmBAAA%3BEACA%2CyBAAA%3B%3BAAEF%3BEAAU%3BEAAiB%3B%3BAAE3B%2CQAAS%3BEAAK%3B%3BAACd%3BEACE%3BEACA%2CyBAAA%3BEACA%2CcAAA%3BECmHiB%2C%2BBAAA%3BEAAyC%2CgCAAA%3B%3BADhH5D%2COAAQ%3BEAAG%3B%3BAASX%2CQAJ0B%3BEAExB%3BIAAO%3B%3B%3BAAQT%2CQAN0B%3BEACxB%3BIAAO%3B%3BEC6CP%2CKAAS%3BIAAI%3BIAAY%3B%3BEACzB%2CKAAS%2CGAAG%3BIAAI%3BIAAe%3B%3BEAC%5C%2FB%2CKAAS%2CGAAG%2CGAAG%3BIAAI%3BIAAa%3B%3BEAChC%2CKAAS%2CGAAE%2CMAAO%3BIAAI%3BIAAgB%3BIAAW%3B%3BEACjD%2CKAAS%3BIAAI%3BIAAW%3BIAAW%3B%3BEACnC%2CKAAS%2CGAAE%2CKAAM%2CEAAC%3BIAAQ%2CSAAQ%2CIAAR%3B%3BEAC1B%2CKAAS%2CGAAE%2CKAAM%2CEAAC%3BIAAQ%2CSAAQ%2CKAAR%3B%3BEAC1B%2CKAAS%2CGAAE%2CKAAM%2CEAAC%3BIAAQ%2CSAAQ%2CMAAR%3B%3BEAC1B%2CKAAS%2CGAAE%2CKAAM%2CEAAC%3BIAAQ%2CSAAQ%2CMAAR%3B%3BEAC1B%2CKAAS%2CGAAE%3BIAAQ%3B%3BEACnB%2CKAAS%3BIAAG%3B%3BEACZ%2CKAAS%2CEAAC%3BIAAS%2CyBAAA%3BIAA4B%2CcAAA%3B%3BEAC%5C%2FC%2CKAAS%2CEAAC%3BIAAQ%2CyBAAA%3BIAAkC%2CcAAA%3B%3BEACpD%2CKAAS%2CEAAC%3BIAAU%3B%3BEACpB%3BIAAU%3BIAAc%3BIAAwB%3BIAA2B%3B%3BEAC3E%2CKAAQ%3BIAAQ%3B%3BEAChB%2CKAAQ%2CMAAO%2CGAAG%3BIAAI%3B%3BEACtB%2CKAAQ%2CMAAO%3BIAAG%3B%3BEAClB%2CKAAQ%2CMAAO%2CGAAG%2CEAAC%3BIAAS%2CSAAQ%2CEAAR%3B%3BEAC5B%2CKAAS%2CEAAC%2CQAAQ%3BIAAS%2CSAAQ%2CIAAR%3B%3BEA0B3B%2CIAAa%3BIAAO%3BIAAW%3B%3BEAC%5C%2FB%2CIAAa%2CSAAS%2CKAAI%3BIAAQ%3BIAAmB%3B%3BEACrD%2CIAAa%3BEAAO%2CIAAa%3BEAAU%2CIAAa%3BIAAQ%3B%3BEAChE%2CIAAa%2CSAAS%2CMAAG%2CSAAU%3BIAAO%3BIAAW%3B%3BEACrD%2CIAAa%2CSAAS%2CMAAG%2CSAAU%2CMAAK%3BIAAW%3BIAAW%3B%3BEAC9D%2CIAAa%2CSAAS%2CMAAG%2CMAAO%3BIAAK%3BIAAc%3B%3B%3BADvFrD%2CQAH0B%3BEACxB%3BIAAY%22%7D */
+body{background:#dea}#container{width:98%;max-width:960px;min-width:300px;background:#fff;margin:1rem auto;border-radius:10px}#container>*{width:100%}#header{padding:1rem}#header h1{margin:0}#header h1 a{text-decoration:none}#menu{width:100%;height:1.9rem;padding:0 .5rem;background-color:#696}#content{min-height:300px;padding:1rem}#content img{max-width:100%}#footer{text-align:center;background-color:#696;color:#fff;border-bottom-left-radius:10px;border-bottom-right-radius:10px}#footer p{padding:.5rem}@media (max-width:800px){html{font-size:14px}}@media (max-width:480px){html{font-size:12px}.menu ul{float:left;display:block}.menu ul ul{display:block;margin-bottom:0}.menu ul ul ul{margin-top:0;margin-left:0}.menu li:hover>ul{position:static;width:100%;margin:0}.menu li{float:left;clear:both;display:block}.menu li.lev2 a:before{content:"> "}.menu li.lev3 a:before{content:">> "}.menu li.lev4 a:before{content:">>> "}.menu li.lev5 a:before{content:"..> "}.menu li:hover{position:static}.menu a{display:none}.menu a.active{background-color:#696;color:#fff}.menu a:hover{background-color:#dea;color:#696}.menu a.current{display:block}.menu{height:1.8rem;padding-top:0 !important;padding-bottom:0 !important;overflow:hidden}.menu:hover{height:auto}.menu:hover ul ul{margin-left:1rem}.menu:hover a{display:block}.menu:hover li a:before{content:""}.menu a.current:before{content:"= "}form label{float:none;width:100%}form fieldset span.error{margin-top:-1.5rem;max-width:100%}form input,form textarea,form select{width:100%}form fieldset>div.checkbox label{float:left;width:auto}form fieldset>div.checkbox input.checkbox{float:left;margin-left:1rem}form fieldset>div.radio>div{margin-left:0;top:0}}@media (max-width:320px){#container{min-width:320px}}
+/*# sourceMappingURL=maps/layout.css.map */
