--- a/site/assets/css/text.css
+++ b/site/assets/css/text.css
@@ -1,423 +1,2 @@
-/* BLOCK ELEMENT RESET */
-address,
-article,
-aside,
-audio,
-blockquote,
-canvas,
-dd,
-details,
-div,
-dl,
-fieldset,
-figcaption,
-figcaption,
-figure,
-footer,
-footer,
-form,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-header,
-hgroup,
-hgroup,
-img,
-hr,
-main,
-nav,
-noscript,
-ol,
-output,
-p,
-pre,
-section,
-section,
-summary,
-table,
-tfoot,
-ul,
-video {
-  display: block;
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-/* BASIC FONT */
-body {
-  font-size: 1rem;
-  line-height: 1.5rem;
-  letter-spacing: .03rem;
-  font-family: Arial,Helvetica,sans-serif;
-  color: #666666;
-  background-color: #ffffff;
-}
-/* BASIC FONT SIZE */
-html {
-  font-size: 16px;
-}
-/* PARAGRAPHS & HEADINGS */
-p,
-ul,
-ol,
-form {
-  margin-bottom: 1rem;
-}
-h1:first-child {
-  margin-bottom: 1rem;
-}
-h1 {
-  font-size: 2rem;
-  line-height: 2.5rem;
-  color: #669966;
-}
-h2 {
-  font-size: 1.5rem;
-  line-height: 2rem;
-  color: #669966;
-}
-h3 {
-  margin-bottom: 0;
-  color: #669966;
-}
-/* LINKS */
-a {
-  text-decoration: none;
-  color: #669966;
-}
-a:hover {
-  text-decoration: underline;
-  color: #006600;
-}
-/* OTHERS */
-li {
-  margin-left: 1rem;
-  padding-left: 1rem;
-}
-hr,
-.hr {
-  width: 100%;
-  margin: 1rem 0px;
-  border: solid 1px #669966;
-}
-code {
-  color: #ff6600;
-  background-color: #ddeeaa;
-  padding: .25rem;
-  border-radius: 5px;
-}
-/* GLOBAL CLASSES */
-.small {
-  font-size: .75rem;
-}
-.color {
-  color: #669966;
-}
-.hidden {
-  display: none;
-}
-.border {
-  border: solid 1px #666666;
-}
-.error {
-  color: #ff0000;
-}
-.warning {
-  color: #cc0000;
-}
-.special {
-  color: #ff6600;
-}
-/* MENU */
-.navbar ul ul {
-  display: none;
-}
-.navbar li {
-  list-style: none;
-  margin: 0px;
-  padding: 0px;
-}
-.navbar a {
-  color: #ffffff;
-  background-color: #669966;
-  text-transform: uppercase;
-  padding: 0.2rem 0.5rem;
-  white-space: nowrap;
-  display: block;
-}
-.navbar a.current,
-.navbar a.active,
-.navbar a:hover {
-  background-color: #ddeeaa;
-  color: #669966;
-  text-decoration: none;
-}
-/* horizontal menu */
-.navbar-default ul {
-  width: 100%;
-}
-.navbar-default ul ul ul {
-  margin-top: -1.9rem;
-  margin-left: 100%;
-}
-.navbar-default li:hover > ul {
-  display: block;
-  position: absolute;
-  width: auto;
-}
-.navbar-default li {
-  background-color: #669966;
-  display: inline;
-  float: left;
-}
-.navbar-default li.lev1 ul li {
-  float: none;
-  display: block;
-}
-/* vertical menu */
-.navbar-stacked ul {
-  float: left;
-}
-.navbar-stacked li {
-  float: left;
-  clear: both;
-}
-.navbar-stacked li:hover {
-  position: relative;
-}
-.navbar-stacked li:hover > ul {
-  margin-top: -1.9rem;
-  margin-left: 100%;
-  display: block;
-  position: absolute;
-}
-/* mobile menu */
-.navbar-mobile ul {
-  float: left;
-  display: block;
-}
-.navbar-mobile ul ul {
-  display: block;
-  margin-bottom: 0;
-}
-.navbar-mobile ul ul ul {
-  margin-top: 0;
-  margin-left: 0;
-}
-.navbar-mobile li:hover > ul {
-  position: static;
-  width: 100%;
-  margin: 0;
-}
-.navbar-mobile li {
-  float: left;
-  clear: both;
-  display: block;
-}
-.navbar-mobile li.lev2 a:before {
-  content: "> ";
-}
-.navbar-mobile li.lev3 a:before {
-  content: ">> ";
-}
-.navbar-mobile li.lev4 a:before {
-  content: ">>> ";
-}
-.navbar-mobile li.lev5 a:before {
-  content: "..> ";
-}
-.navbar-mobile li:hover {
-  position: static;
-}
-.navbar-mobile a {
-  display: none;
-}
-.navbar-mobile a.active {
-  background-color: #669966;
-  color: #ffffff;
-}
-.navbar-mobile a:hover {
-  background-color: #ddeeaa;
-  color: #669966;
-}
-.navbar-mobile a.current {
-  display: block;
-}
-.navbar-mobile {
-  height: 1.8rem;
-  padding-top: 0 !important;
-  padding-bottom: 0 !important;
-  overflow: hidden;
-}
-.navbar-mobile:hover {
-  height: auto;
-}
-.navbar-mobile:hover ul ul {
-  margin-left: 1rem;
-}
-.navbar-mobile:hover a {
-  display: block;
-}
-.navbar-mobile:hover li a:before {
-  content: "";
-}
-.navbar-mobile a.current:before {
-  content: "= ";
-}
-/* FORMS, label on same line */
-fieldset {
-  border: none;
-}
-legend {
-  display: none;
-  padding: 0px 1rem;
-}
-fieldset > div {
-  margin-bottom: 1rem;
-  clear: both;
-}
-fieldset > div.required label:after {
-  content: " *";
-  color: #cc0000;
-}
-label {
-  width: 30%;
-  font-weight: bold;
-  float: left;
-  box-sizing: border-box;
-}
-fieldset span.error {
-  display: block;
-  position: absolute;
-  max-width: 28%;
-  background-color: #ffffff;
-}
-input,
-textarea,
-select {
-  width: 70%;
-  display: block;
-  box-sizing: border-box;
-  padding: .25rem .5rem;
-  border: solid 1px #ddeeaa;
-  cursor: pointer;
-}
-textarea {
-  resize: none;
-}
-input:hover,
-textarea:hover,
-select:hover {
-  border-color: #669966;
-}
-.button {
-  text-transform: uppercase;
-  width: auto;
-  float: right;
-  background-color: #ffffff;
-}
-.button:hover {
-  background-color: #669966;
-  color: #ffffff;
-}
-input.checkbox {
-  width: 1rem;
-  height: 1rem;
-  margin-bottom: 1.75rem;
-  position: relative;
-  top: .25rem;
-}
-fieldset > div.radio > div {
-  margin-left: 30%;
-  width: 100%;
-  float: left;
-  position: relative;
-  top: -1rem;
-}
-fieldset > div.radio > div input {
-  float: left;
-  width: 1rem;
-  height: 1rem;
-}
-fieldset > div.radio > div label {
-  float: left;
-  margin-left: 1rem;
-  margin-top: -.25rem;
-}
-select {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-}
-select option {
-  margin: .25rem .5rem;
-  border: none;
-}
-/* vertical form, labels on seperate line */
-form.vertical label {
-  float: none;
-  width: 100%;
-}
-form.vertical fieldset span.error {
-  margin-top: -1.5rem;
-  max-width: 100%;
-}
-form.vertical input,
-form.vertical textarea,
-form.vertical select {
-  width: 100%;
-}
-form.vertical fieldset > div.checkbox label {
-  float: left;
-  width: auto;
-}
-form.vertical fieldset > div.checkbox input.checkbox {
-  float: left;
-  margin-left: 1rem;
-}
-form.vertical fieldset > div.radio > div {
-  margin-left: 0;
-  top: 0px;
-}
-/* CORNERS */
-.corners,
-form.corners fieldset,
-form.corners input,
-form.corners textarea,
-form.corners select {
-  border-radius: 10px;
-}
-.corners-top {
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-}
-.corners-bottom {
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-}
-/* STYLES in TinyMCE editor (backend) */
-body#tinymce {
-  margin: 4px;
-  color: #000;
-  background-color: #FFF;
-}
-body#tinymce * {
-  font-size: 14px;
-}
-body#tinymce a {
-  text-decoration: underline;
-}
-body#tinymce iframe,
-body#tinymce embed,
-body#tinymce object,
-body#tinymce .mceItemMedia,
-body#tinymce .mceItemIframe {
-  background-color: #CCC;
-  background-image: url('../../../sys/flexyadmin/assets/icons/movie.gif');
-  background-position: center center;
-  background-repeat: no-repeat;
-  border: dotted 1px #F00;
-}
-/*# sourceMappingURL=data:application/json,%7B%22version%22%3A3%2C%22sources%22%3A%5B%22site%5C%2Fassets%5C%2Fless-default%5C%2Ftext.less%22%5D%2C%22names%22%3A%5B%5D%2C%22mappings%22%3A%22%3BAAgCA%3BAAAQ%3BAAAQ%3BAAAM%3BAAAM%3BAAAW%3BAAAO%3BAAAG%3BAAAQ%3BAAAI%3BAAAG%3BAAAS%3BAAAW%3BAAAW%3BAAAO%3BAAAO%3BAAAO%3BAAAK%3BAAAG%3BAAAG%3BAAAG%3BAAAG%3BAAAG%3BAAAG%3BAAAO%3BAAAO%3BAAAO%3BAAAI%3BAAAG%3BAAAK%3BAAAI%3BAAAS%3BAAAG%3BAAAO%3BAAAE%3BAAAI%3BAAAQ%3BAAAQ%3BAAAQ%3BAAAM%3BAAAM%3BAAAG%3BEAC9O%3BEACA%3BEACA%3BEAAU%3B%3B%3BAAIZ%3BEACE%3BEACA%3BEACA%3BEACA%3BEACA%2CcAAA%3BEACA%2CyBAAA%3B%3B%3BAAGF%3BEAAM%3B%3B%3BAAGN%3BAAAE%3BAAAG%3BAAAG%3BEAAM%3B%3BAACd%2CEAAE%3BEAAc%3B%3BAAChB%3BEAAI%3BEAAe%3BEAAmB%2CcAAA%3B%3BAACtC%3BEAAI%3BEAAiB%3BEAAiB%2CcAAA%3B%3BAACtC%3BEAAI%3BEAAgB%2CcAAA%3B%3B%3BAAGpB%3BEAAG%3BEAAqB%2CcAAA%3B%3BAACxB%2CCAAC%3BEAAQ%3BEAA0B%2CcAAA%3B%3B%3BAAGnC%3BEAAI%3BEAAiB%3B%3BAACrB%3BAAAG%3BEAAK%3BEAAW%2CgBAAA%3BEAAgB%2CyBAAA%3B%3BAACnC%3BEAAM%2CcAAA%3BEAAoB%2CyBAAA%3BEAAuB%3BEAAe%2CkBAAA%3B%3B%3BAAGhE%3BEAAS%3B%3BAACT%3BEAAQ%2CcAAA%3B%3BAACR%3BEAAU%3B%3BAACV%3BEAAU%2CyBAAA%3B%3BAACV%3BEAAQ%2CcAAA%3B%3BAACR%3BEAAU%2CcAAA%3B%3BAACV%3BEAAU%2CcAAA%3B%3B%3BAAIV%2COAAQ%2CGAAG%3BEAAI%3B%3BAACf%2COAAQ%3BEAAI%3BEAAgB%3BEAAW%3B%3BAACvC%2COAAQ%3BEAAG%2CcAAA%3BEAAiB%2CyBAAA%3BEAA4B%3BEAAyB%2CsBAAA%3BEAAsB%3BEAAmB%3B%3BAAC1H%2COAAQ%2CEAAC%3BAAAU%2COAAQ%2CEAAC%3BAAAS%2COAAQ%2CEAAC%3BEAAQ%2CyBAAA%3BEAAkC%2CcAAA%3BEAAuB%3B%3B%3BAAE%5C%2FG%2CeAAgB%3BEAAI%3B%3BAACpB%2CeAAgB%2CGAAG%2CGAAG%3BEAAI%3BEAAmB%3B%3BAAC7C%2CeAAgB%2CGAAE%2CMAAO%3BEAAI%3BEAAc%3BEAAkB%3B%3BAAC7D%2CeAAgB%3BEAAI%2CyBAAA%3BEAA4B%3BEAAe%3B%3BAAC%5C%2FD%2CeAAgB%2CGAAE%2CKAAM%2CGAAG%3BEAAI%3BEAAW%3B%3B%3BAAE1C%2CeAAgB%3BEAAI%3B%3BAACpB%2CeAAgB%3BEAAI%3BEAAW%3B%3BAAC%5C%2FB%2CeAAgB%2CGAAE%3BEAAQ%3B%3BAAC1B%2CeAAgB%2CGAAE%2CMAAO%3BEAAI%3BEAAmB%3BEAAiB%3BEAAc%3B%3B%3BAAG7E%2CcAAS%3BEAAI%3BEAAY%3B%3BAACzB%2CcAAS%2CGAAG%3BEAAI%3BEAAe%3B%3BAAC%5C%2FB%2CcAAS%2CGAAG%2CGAAG%3BEAAI%3BEAAa%3B%3BAAChC%2CcAAS%2CGAAE%2CMAAO%3BEAAI%3BEAAgB%3BEAAW%3B%3BAACjD%2CcAAS%3BEAAI%3BEAAW%3BEAAW%3B%3BAACnC%2CcAAS%2CGAAE%2CKAAM%2CEAAC%3BEAAQ%2CSAAQ%2CIAAR%3B%3BAAC1B%2CcAAS%2CGAAE%2CKAAM%2CEAAC%3BEAAQ%2CSAAQ%2CKAAR%3B%3BAAC1B%2CcAAS%2CGAAE%2CKAAM%2CEAAC%3BEAAQ%2CSAAQ%2CMAAR%3B%3BAAC1B%2CcAAS%2CGAAE%2CKAAM%2CEAAC%3BEAAQ%2CSAAQ%2CMAAR%3B%3BAAC1B%2CcAAS%2CGAAE%3BEAAQ%3B%3BAACnB%2CcAAS%3BEAAG%3B%3BAACZ%2CcAAS%2CEAAC%3BEAAS%2CyBAAA%3BEAA4B%2CcAAA%3B%3BAAC%5C%2FC%2CcAAS%2CEAAC%3BEAAQ%2CyBAAA%3BEAAkC%2CcAAA%3B%3BAACpD%2CcAAS%2CEAAC%3BEAAU%3B%3BAACpB%3BEAAU%3BEAAc%3BEAAwB%3BEAA2B%3B%3BAAC3E%2CcAAQ%3BEAAQ%3B%3BAAChB%2CcAAQ%2CMAAO%2CGAAG%3BEAAI%3B%3BAACtB%2CcAAQ%2CMAAO%3BEAAG%3B%3BAAClB%2CcAAQ%2CMAAO%2CGAAG%2CEAAC%3BEAAS%2CSAAQ%2CEAAR%3B%3BAAC5B%2CcAAS%2CEAAC%2CQAAQ%3BEAAS%2CSAAQ%2CIAAR%3B%3B%3BAAO7B%3BEAAU%3B%3BAACV%3BEAAQ%3BEAAa%2CiBAAA%3B%3BAACrB%2CQAAS%3BEAAK%3BEAAmB%3B%3BAACjC%2CQAAS%2CMAAG%2CSAAU%2CMAAK%3BEAAS%2CSAAQ%2CIAAR%3BEAAc%2CcAAA%3B%3BAAClD%3BEAAO%3BEAAU%3BEAAiB%3BEAAW%3B%3BAAC7C%2CQAAS%2CKAAI%3BEAAQ%3BEAAc%3BEAAkB%3BEAAc%2CyBAAA%3B%3BAACnE%3BAAAM%3BAAAS%3BEAAQ%3BEAAU%3BEAAc%3BEAAsB%2CqBAAA%3BEAAqB%2CyBAAA%3BEAAuB%3B%3BAACjH%3BEAAU%3B%3BAACV%2CKAAK%3BAAAO%2CQAAQ%3BAAAO%2CMAAM%3BEAAQ%2CqBAAA%3B%3BAACzC%3BEAAS%3BEAAyB%3BEAAW%3BEAAY%2CyBAAA%3B%3BAACzD%2COAAO%3BEAAQ%2CyBAAA%3BEAA4B%2CcAAA%3B%3BAAC3C%2CKAAK%3BEAAW%3BEAAW%3BEAAY%3BEAAsB%3BEAAkB%3B%3BAAC%5C%2FE%2CQAAS%2CMAAG%2CMAAO%3BEAAK%3BEAAgB%3BEAAW%3BEAAW%3BEAAkB%3B%3BAAChF%2CQAAS%2CMAAG%2CMAAO%2CMAAI%3BEAAO%3BEAAW%3BEAAW%3B%3BAACpD%2CQAAS%2CMAAG%2CMAAO%2CMAAI%3BEAAO%3BEAAW%3BEAAiB%3B%3BAAC1D%3BEAAQ%3BEAAyB%3B%3BAACjC%2CMAAO%3BEAAQ%2CoBAAA%3BEAAoB%3B%3B%3BAAGjC%2CIAAI%2CSAAS%3BEAAO%3BEAAW%3B%3BAAC%5C%2FB%2CIAAI%2CSAAS%2CSAAS%2CKAAI%3BEAAQ%3BEAAmB%3B%3BAACrD%2CIAAI%2CSAAS%3BAAAO%2CIAAI%2CSAAS%3BAAAU%2CIAAI%2CSAAS%3BEAAQ%3B%3BAAChE%2CIAAI%2CSAAS%2CSAAS%2CMAAG%2CSAAU%3BEAAO%3BEAAW%3B%3BAACrD%2CIAAI%2CSAAS%2CSAAS%2CMAAG%2CSAAU%2CMAAK%3BEAAW%3BEAAW%3B%3BAAC9D%2CIAAI%2CSAAS%2CSAAS%2CMAAG%2CMAAO%3BEAAK%3BEAAc%3B%3B%3BAAWrD%3BAAAU%2CIAAI%2CQAAS%3BAAAU%2CIAAI%2CQAAS%3BAAAO%2CIAAI%2CQAAS%3BAAAU%2CIAAI%2CQAAS%3BEANtE%2CmBAAA%3B%3BAAOnB%3BEANmB%2C4BAAA%3BEAAsC%2C6BAAA%3B%3BAAOzD%3BEANmB%2C%2BBAAA%3BEAAyC%2CgCAAA%3B%3B%3BAAS5D%2CIAAI%3BEAAW%3BEAAW%3BEAAW%3B%3BAACrC%2CIAAI%2CQAAS%3BEAAG%3B%3BAAChB%2CIAAI%2CQAAS%3BEAAI%3B%3BAACjB%2CIAAI%2CQAAS%3BAAAQ%2CIAAI%2CQAAS%3BAAAO%2CIAAI%2CQAAS%3BAAAQ%2CIAAI%2CQAAS%3BAAAe%2CIAAI%2CQAAS%3BEAAgB%3BEAAsB%2CsBAAsB%2CiDAAtB%3BEAAwE%2CkCAAA%3BEAAkC%3BEAA4B%2CuBAAA%22%7D */
+address,article,aside,audio,blockquote,canvas,dd,details,div,dl,fieldset,figcaption,figcaption,figure,footer,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,hgroup,img,hr,main,nav,noscript,ol,output,p,pre,section,section,summary,table,tfoot,ul,video{display:block;box-sizing:border-box;margin:0;padding:0}body{font-size:1rem;line-height:1.5rem;letter-spacing:.03rem;font-family:Arial,Helvetica,sans-serif;color:#666;background-color:#fff}html{font-size:16px}p,ul,ol,form{margin-bottom:1rem}h1:first-child{margin-bottom:1rem}h1{font-size:2rem;line-height:2.5rem;color:#696}h2{font-size:1.5rem;line-height:2rem;color:#696}h3{margin-bottom:0;color:#696}a{text-decoration:none;color:#696}a:hover{text-decoration:underline;color:#060}li{margin-left:1rem;padding-left:1rem}hr,.hr{width:100%;margin:1rem 0;border:solid 1px #696}code{color:#f60;background-color:#dea;padding:.25rem;border-radius:5px}.small{font-size:.75rem}.color{color:#696}.hidden{display:none}.border{border:solid 1px #666}.error{color:#f00}.warning{color:#900}.special{color:#f60}.navbar ul ul{display:none}.navbar li{list-style:none;margin:0;padding:0}.navbar a{color:#fff;background-color:#696;text-transform:uppercase;padding:.2rem .5rem;white-space:nowrap;display:block}.navbar a.current,.navbar a.active,.navbar a:hover{background-color:#dea;color:#696;text-decoration:none}.navbar-default ul{width:100%}.navbar-default ul ul ul{margin-top:-1.9rem;margin-left:100%}.navbar-default li:hover>ul{display:block;position:absolute;width:auto}.navbar-default li{background-color:#696;display:inline;float:left}.navbar-default li.lev1 ul li{float:none;display:block}.navbar-stacked ul{float:left}.navbar-stacked li{float:left;clear:both}.navbar-stacked li:hover{position:relative}.navbar-stacked li:hover>ul{margin-top:-1.9rem;margin-left:100%;display:block;position:absolute}.navbar-mobile ul{float:left;display:block}.navbar-mobile ul ul{display:block;margin-bottom:0}.navbar-mobile ul ul ul{margin-top:0;margin-left:0}.navbar-mobile li:hover>ul{position:static;width:100%;margin:0}.navbar-mobile li{float:left;clear:both;display:block}.navbar-mobile li.lev2 a:before{content:"> "}.navbar-mobile li.lev3 a:before{content:">> "}.navbar-mobile li.lev4 a:before{content:">>> "}.navbar-mobile li.lev5 a:before{content:"..> "}.navbar-mobile li:hover{position:static}.navbar-mobile a{display:none}.navbar-mobile a.active{background-color:#696;color:#fff}.navbar-mobile a:hover{background-color:#dea;color:#696}.navbar-mobile a.current{display:block}.navbar-mobile{height:1.8rem;padding-top:0 !important;padding-bottom:0 !important;overflow:hidden}.navbar-mobile:hover{height:auto}.navbar-mobile:hover ul ul{margin-left:1rem}.navbar-mobile:hover a{display:block}.navbar-mobile:hover li a:before{content:""}.navbar-mobile a.current:before{content:"= "}fieldset{border:none}legend{display:none;padding:0 1rem}fieldset>div{margin-bottom:1rem;clear:both}fieldset>div.required label:after{content:" *";color:#900}label{width:30%;font-weight:bold;float:left;box-sizing:border-box}fieldset span.error{display:block;position:absolute;max-width:28%;background-color:#fff}input,textarea,select{width:70%;display:block;box-sizing:border-box;padding:.25rem .5rem;border:solid 1px #dea;cursor:pointer}textarea{resize:none}input:hover,textarea:hover,select:hover{border-color:#696}.button{text-transform:uppercase;width:auto;float:right;background-color:#fff}.button:hover{background-color:#696;color:#fff}input.checkbox{width:1rem;height:1rem;margin-bottom:1.75rem;position:relative;top:.25rem}fieldset>div.radio>div{margin-left:30%;width:100%;float:left;position:relative;top:-1rem}fieldset>div.radio>div input{float:left;width:1rem;height:1rem}fieldset>div.radio>div label{float:left;margin-left:1rem;margin-top:-0.25rem}select{-webkit-appearance:none;-moz-appearance:none}select option{margin:.25rem .5rem;border:none}fieldset>div.has-error input{border-color:#f00}fieldset>div.has-success input{border-color:#060}form.vertical label{float:none;width:100%}form.vertical fieldset span.error{margin-top:-1.5rem;max-width:100%}form.vertical input,form.vertical textarea,form.vertical select{width:100%}form.vertical fieldset>div.checkbox label{float:left;width:auto}form.vertical fieldset>div.checkbox input.checkbox{float:left;margin-left:1rem}form.vertical fieldset>div.radio>div{margin-left:0;top:0}.corners,form.corners fieldset,form.corners input,form.corners textarea,form.corners select{border-radius:10px}.corners-top{border-top-left-radius:10px;border-top-right-radius:10px}.corners-bottom{border-bottom-left-radius:10px;border-bottom-right-radius:10px}body#tinymce{margin:4px;color:#000;background-color:#fff}body#tinymce *{font-size:14px}body#tinymce a{text-decoration:underline}body#tinymce iframe,body#tinymce embed,body#tinymce object,body#tinymce .mceItemMedia,body#tinymce .mceItemIframe{background-color:#ccc;background-image:url('../../../sys/flexyadmin/assets/icons/movie.gif');background-position:center center;background-repeat:no-repeat;border:dotted 1px #f00}
+/*# sourceMappingURL=maps/text.css.map */
