--- a/site/assets/less-bootstrap/variables.less
+++ b/site/assets/less-bootstrap/variables.less
@@ -599,7 +599,7 @@
 //
 //## Define alert colors, border radius, and padding.
 
-@alert-padding:               15px;
+@alert-padding:               .25rem;
 @alert-border-radius:         @border-radius-base;
 @alert-link-font-weight:      bold;
 
