- FRONTEND: mobile theme changed / Fontawsome standard included
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@2846 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 1f1ecc548eab369eeed13a5d2fd1c8407b4727d6
Former-commit-id: 11f9445565f2e513acb680ddea91d03f9a0d57a5
Former-commit-id: cbeb25e4410ce5a98ce24ba18c7fc25c414e8fa2

--- a/site/assets/less-default/layout.less
+++ b/site/assets/less-default/layout.less
@@ -42,16 +42,19 @@ body {background:@body;}
 //////////////////////////////////////////////////////
 // RESPONSIVE                    /////////////////////
 //////////////////////////////////////////////////////
-@media (max-width: 800px) {
-  // Font a bit smaller, and all fonts (and more) will resize because of the rem units.
+@media (max-width: 760px) {
   html { font-size: 14px; }
 }
+
 @media (max-width: 480px) {
-  html { font-size: 12px; }
+  #container {margin:0;}
+  .mobile-only {display:inline}
+  div.mobile-only {display:block}
   // At this point the menu always will be mobile and the form will be vertical
-  .mobile_menu(~'.menu');
+  .navbar-mobile(~'.navbar');
   .vertical_form(~'');
 }
+
 @media (max-width: 320px) {
   #container {min-width:320px}
 }
