- CHANGED: some backend formstyling
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@2847 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: b3a4a70f24dfd2cceb6e414b9e03d63eb75224b1
Former-commit-id: e1e8d7f97bfd4cd8f83065d281669b2196047211
Former-commit-id: 224ad45bbeb93fe65e343248545b6ac8498ceb4e

--- a/sys/flexyadmin/assets/css/admin_main.css
+++ b/sys/flexyadmin/assets/css/admin_main.css
@@ -973,8 +973,7 @@ input, textarea, select {
 	letter-spacing:.04em;
 }
 
-input.gpw,
-input.pwd {width:150px;}
+.fieldtype_gpw input, .fieldtype_pwd input {width:150px;}
 
 input.rgb {width:80px;}
 div.rgbColor {
