- BUG: flexyfield styling
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@2855 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: e6efcde30b3ab4df9c4888600cc5388c006ebaf8
Former-commit-id: 8310e55717dd5cb128bfa1d0657aabd8e62cc3af
Former-commit-id: 0d22afab87f522868646711b5e159357e0152db5

--- a/sys/flexyadmin/assets/css/admin_main.css
+++ b/sys/flexyadmin/assets/css/admin_main.css
@@ -1087,11 +1087,11 @@ select.image_dropdown {
 
 body.normal_dropdowns select.image_dropdown {margin-top:0px;}
 
-.flexyFormField.medias select.image_dropdown {	width:460px;}
+.flexyFormField.fieldtype_medias select.image_dropdown {	width:460px;}
 
-.flexyFormField.media {min-height:35px;}
-.flexyFormField.medias {min-height:36px;}
-body.normal_dropdowns .flexyFormField.medias {
+.flexyFormField.fieldtype_media {min-height:35px;}
+.flexyFormField.fieldtype_medias {min-height:36px;}
+body.normal_dropdowns .flexyFormField.fieldtype_medias {
 /*  float:left;*/
   height:200px;
 }
@@ -1210,7 +1210,8 @@ input.button {
 	margin-left:149px;
 }
 .flexyFormField ul.multiple,
-.flexyFormField ul.choices {
+.flexyFormField ul.choices,
+.flexyFormField ul.values {
 	width:450px;
 }
 
