--- a/sys/__test/less/flexy-main.less
+++ b/sys/__test/less/flexy-main.less
@@ -34,7 +34,7 @@ header, footer {height:@flexy-header-height;}
 
 /* SIDEBAR MENU: smaller items & padding glyphs */
 .menu-side li a {padding:7px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
-.menu-side li a .glyphicon {margin-right:7px;}
+.flexy-menu li a .glyphicon {margin-right:7px;}
 
 /* LOADING BAR */
 #loading-bar-spinner {top:50%;left:50%;margin-left:-17px;margin-top:-17px;}
