- NEW: rudimentary plugins show - NEW: better debug view - CHANGED: grid/graph has standard bootstrap classes
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@2868 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: d6655ba7d66292d372a6392fe95d627bae63db0e
Former-commit-id: c8c89f0af2b353cd62e154229e44817c1d8bb7f6
Former-commit-id: 109cedda4382278d79cb8c203705046d0cee7a1d

--- a/sys/__test/less/flexy-main.less
+++ b/sys/__test/less/flexy-main.less
@@ -14,6 +14,9 @@ a {outline:none!important;}
 /* BODY: paddings for fixed header/footer */
 body {padding:(@flexy-header-height + @flexy-margins) 0;}
 
+#debug {margin:15px 15px 30px;}
+#debug .panel-content * {font-size:1.35rem;}
+
 /* NAVBAR in HEADER & FOOTER smaller-uppercase */
 header, footer {height:@flexy-header-height;}
 .navbar>.navbar-text {
