--- a/site/assets/less-default/text.less
+++ b/site/assets/less-default/text.less
@@ -124,6 +124,17 @@ code {color:@text_special;background-color:@body;padding:.25rem;border-radius:(@
 .navbar-mobile(~'.navbar-mobile');
 
 
+/* PAGINATION */
+.pagination {width:100%;height:3rem;}
+.pagination ul {float:left;}
+.pagination li {list-style-type:none;display:inline;padding:0;margin:0;margin-right:1rem;}
+.pagination li a {background-color:@menu_back;color:@menu_text;text-decoration:none}
+.pagination li:hover a {background-color:@menu_hover_back;color:@menu_hover_text;}
+.pagination li>.btn {margin:0;padding:.5rem;background-color:@menu_back;color:@menu_text;}
+.pagination li:hover>.btn, .pagination li.active>.btn {background-color:@menu_hover_back;color:@menu_hover_text;}
+.pagination_total {float:right;}
+
+
 /* FORMS, label on same line */
 form {}
 fieldset {border:none;}
@@ -143,6 +154,9 @@ fieldset>div.radio>div input {float:left;width:1rem;height:1rem;}
 fieldset>div.radio>div label {float:left;margin-left:1rem;margin-top:-.25rem;}
 select {-webkit-appearance: none;-moz-appearance:none;}
 select option {margin:.25rem .5rem;border:none;}
+/* captcha */
+fieldset>div.captcha img {display:block;float:left;height:1.9rem;width:150px;border:solid 1px @body;}
+fieldset>div.captcha input {float:left;width:8rem;margin-left:1rem;}
 /* status */
 fieldset>div.has-error input {border-color:@text_error}
 fieldset>div.has-success input {border-color:@text_success}
