--- a/site/assets/less-default/text.less
+++ b/site/assets/less-default/text.less
@@ -142,7 +142,7 @@ legend {display:none;padding:0px 1rem;}
 fieldset>div {margin-bottom:1rem;clear:both;}
 fieldset>div.required label:after { content:" *"; color:@text_warning;}
 label {width:30%;font-weight:bold;float:left;box-sizing:border-box;}
-fieldset span.error {display:block;position:absolute;max-width:28%;background-color:@back;}
+span.error {display:block}
 input,textarea,select {width:70%;display:block;box-sizing:border-box;padding:.25rem .5rem;border:solid 1px @body;cursor:pointer;}
 textarea {resize:none;}
 input:hover,textarea:hover,select:hover {border-color:@text_link;}
