- CHANGED: install_plugin, shows readmes of all standard plugins
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@2887 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 4e28fa8e6fe606e98e55de9a361fe292c62dcc02
Former-commit-id: 856e5dee813b8263734eca6d0650fe604679ef8e
Former-commit-id: 210845520279819c3eac6be65997af1834f8ea07

--- a/sys/flexyadmin/assets/css/admin_main.css
+++ b/sys/flexyadmin/assets/css/admin_main.css
@@ -528,6 +528,48 @@ div.add_button {
 		margin:0px;
 		}
 
+
+/* ============== table ================== */
+    
+table {
+	border-spacing:0px;
+	border: solid 1px #DDEEAA;
+	border-left:none;
+	border-radius: 4px;
+	-o-border-radius: 4px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	margin:0px;
+	padding:0px;
+	min-width:600px;
+}
+tr,td,th			{ background-color:transparent; }
+td, th {
+  text-align: left;
+  vertical-align: top;
+  padding:4px 5px 3px 5px;
+  border: solid 1px #DDEEAA;
+  border-top:none;
+  border-right:none;
+  overflow:hidden;
+  min-width:20px;
+}
+thead {background-color:#DEA;text-transform:uppercase;}
+thead td, thead th {
+  font-weight: bold;
+}
+table td h1, table td h2, table td h3, table td h4 {
+  text-align:left;
+  background-color:transparent;
+  background-image:none;
+  padding:0px;
+}
+
+table.list_of_plugins td:first-child {
+  font-weight:bold;
+  font-size:16px;
+}
+
 /* ============== table grid ================== */
 
 table.grid {
