- CHANGED: module & plugin newsletter - CHANGED: styling of standard Table
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@2889 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 913ef261a46e1e4e7248a1f11a654e2634af3cd2
Former-commit-id: 0d3963c199d06daab5aa18ee7d4d64264323e2c8
Former-commit-id: 7e4b3de5b0bfef3cf9ccd0c4ba2e8a543d10691c

--- a/sys/flexyadmin/assets/css/admin_main.css
+++ b/sys/flexyadmin/assets/css/admin_main.css
@@ -531,7 +531,7 @@ div.add_button {
 
 /* ============== table ================== */
     
-table {
+table.table-class {
 	border-spacing:0px;
 	border: solid 1px #DDEEAA;
 	border-left:none;
@@ -543,8 +543,8 @@ table {
 	padding:0px;
 	min-width:600px;
 }
-tr,td,th			{ background-color:transparent; }
-td, th {
+table.table-class tr, table.table-class td,table.table-class th			{ background-color:transparent; }
+table.table-class td, table.table-class th {
   text-align: left;
   vertical-align: top;
   padding:4px 5px 3px 5px;
@@ -554,18 +554,18 @@ td, th {
   overflow:hidden;
   min-width:20px;
 }
-thead {background-color:#DEA;text-transform:uppercase;}
-thead td, thead th {
+table.table-class thead {background-color:#DEA;text-transform:uppercase;}
+table.table-class thead td, table.table-class thead th {
   font-weight: bold;
 }
-table td h1, table td h2, table td h3, table td h4 {
+table.table-class td h1, table.table-class td h2, table.table-class td h3, table.table-class td h4 {
   text-align:left;
   background-color:transparent;
   background-image:none;
   padding:0px;
 }
 
-table.list_of_plugins td:first-child {
+table.table-class.list_of_plugins td:first-child {
   font-weight:bold;
   font-size:16px;
 }
