- BUG: media did not show extra fields in grid - BUG: media edit nicer label fields
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@2948 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: be6d40f44cb4c64717854f7f439d03ffd6079917
Former-commit-id: d66c2123c7cf6c93df409db3405ee52fe57c018d
Former-commit-id: b1ac111ea43b156e4075bf26d189aa420494379f

--- a/sys/flexyadmin/assets/css/admin_main.css
+++ b/sys/flexyadmin/assets/css/admin_main.css
@@ -672,6 +672,7 @@ tr.caption td				{ border:none; }
 .grid td.date,
 .grid td.tme,
 .grid td.str,
+.grid td.alt,
 .grid td.txt				{ max-width:250px; height:25px;text-overflow:ellipsis;overflow:hidden;white-space:nowrap;}
 .grid td.str_title  { max-width:none; white-space:nowrap;text-overflow:inherit;}
 .grid td.media,
