- NEW: flexy-grid better class names
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3023 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 96c938a0cede20f771e65a784c000871003e3bbd
Former-commit-id: 0ba229ed392d880c7f4103cbcdfe771804fe3b83
Former-commit-id: 7328d4ca14f8c071712da3635111648f59847241

--- a/sys/__test/less/flexy-grid.less
+++ b/sys/__test/less/flexy-grid.less
@@ -52,23 +52,23 @@
 
 
 /* tree, branches & nodes */
-.flexy-grid tbody tr.flexy-tree-node td.str_title {background-image:url('../img/tree_lastnode.gif');background-repeat:no-repeat;}
-.flexy-grid tbody tr.flexy-tree-node[tree-level="1"] td.str_title {padding-left:2rem;background-position:0rem .5rem;}
-.flexy-grid tbody tr.flexy-tree-node[tree-level="2"] td.str_title {padding-left:3rem;background-position:1rem .5rem;}
-.flexy-grid tbody tr.flexy-tree-node[tree-level="3"] td.str_title {padding-left:4rem;background-position:2rem .5rem;}
-.flexy-grid tbody tr.flexy-tree-node[tree-level="4"] td.str_title {padding-left:5rem;background-position:3rem .5rem;}
-.flexy-grid tbody tr.flexy-tree-node[tree-level="5"] td.str_title {padding-left:6rem;background-position:4rem .5rem;}
-.flexy-grid tbody tr.flexy-tree-node[tree-level="6"] td.str_title {padding-left:7rem;background-position:5rem .5rem;}
-.flexy-grid tbody tr.flexy-tree-node[tree-level="7"] td.str_title {padding-left:8rem;background-position:6rem .5rem;}
+.flexy-grid tbody tr.flexy-tree-child td.str_title {background-image:url('../img/tree_lastnode.gif');background-repeat:no-repeat;}
+.flexy-grid tbody tr.flexy-tree-child[tree-level="1"] td.str_title {padding-left:2rem;background-position:0rem .5rem;}
+.flexy-grid tbody tr.flexy-tree-child[tree-level="2"] td.str_title {padding-left:3rem;background-position:1rem .5rem;}
+.flexy-grid tbody tr.flexy-tree-child[tree-level="3"] td.str_title {padding-left:4rem;background-position:2rem .5rem;}
+.flexy-grid tbody tr.flexy-tree-child[tree-level="4"] td.str_title {padding-left:5rem;background-position:3rem .5rem;}
+.flexy-grid tbody tr.flexy-tree-child[tree-level="5"] td.str_title {padding-left:6rem;background-position:4rem .5rem;}
+.flexy-grid tbody tr.flexy-tree-child[tree-level="6"] td.str_title {padding-left:7rem;background-position:5rem .5rem;}
+.flexy-grid tbody tr.flexy-tree-child[tree-level="7"] td.str_title {padding-left:8rem;background-position:6rem .5rem;}
 
-.sortable-drag tr.flexy-tree-node td.str_title {background-image:url('../img/tree_lastnode.gif');background-repeat:no-repeat;}
-.sortable-drag tr.flexy-tree-node[tree-level="1"] td.str_title {padding-left:2rem;background-position:0rem .5rem;}
-.sortable-drag tr.flexy-tree-node[tree-level="2"] td.str_title {padding-left:3rem;background-position:1rem .5rem;}
-.sortable-drag tr.flexy-tree-node[tree-level="3"] td.str_title {padding-left:4rem;background-position:2rem .5rem;}
-.sortable-drag tr.flexy-tree-node[tree-level="4"] td.str_title {padding-left:5rem;background-position:3rem .5rem;}
-.sortable-drag tr.flexy-tree-node[tree-level="5"] td.str_title {padding-left:6rem;background-position:4rem .5rem;}
-.sortable-drag tr.flexy-tree-node[tree-level="6"] td.str_title {padding-left:7rem;background-position:5rem .5rem;}
-.sortable-drag tr.flexy-tree-node[tree-level="7"] td.str_title {padding-left:8rem;background-position:6rem .5rem;}
+.sortable-drag tr.flexy-tree-child td.str_title {background-image:url('../img/tree_lastnode.gif');background-repeat:no-repeat;}
+.sortable-drag tr.flexy-tree-child[tree-level="1"] td.str_title {padding-left:2rem;background-position:0rem .5rem;}
+.sortable-drag tr.flexy-tree-child[tree-level="2"] td.str_title {padding-left:3rem;background-position:1rem .5rem;}
+.sortable-drag tr.flexy-tree-child[tree-level="3"] td.str_title {padding-left:4rem;background-position:2rem .5rem;}
+.sortable-drag tr.flexy-tree-child[tree-level="4"] td.str_title {padding-left:5rem;background-position:3rem .5rem;}
+.sortable-drag tr.flexy-tree-child[tree-level="5"] td.str_title {padding-left:6rem;background-position:4rem .5rem;}
+.sortable-drag tr.flexy-tree-child[tree-level="6"] td.str_title {padding-left:7rem;background-position:5rem .5rem;}
+.sortable-drag tr.flexy-tree-child[tree-level="7"] td.str_title {padding-left:8rem;background-position:6rem .5rem;}
 
 
 
