- NEW: select in Grid with standard plugin from smart-table
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3031 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 119010e0dc3235069592286cc49a591726199830
Former-commit-id: 4b890e46265023e083f2626f41a4f9e6834d5e9d
Former-commit-id: 7798a87077ba3b2f059b39e90a4855c621ca9e03

--- a/sys/__test/less/flexy-grid.less
+++ b/sys/__test/less/flexy-grid.less
@@ -46,11 +46,11 @@
 /* ROW Actions */
 .flexy-grid .table-sortable tr .actions .sortable-handle {display:none}
 /* ROW SELECTION */
-.flexy-grid tr.flexy-grid-selected td {background-color:@brand-info!important;}
+.flexy-grid tr.st-selected td {background-color:@brand-info!important;}
 .flexy-grid tr .action-select span.flexy-grid-selected {display:none;}
 .flexy-grid tr .action-select span.flexy-grid-unselected {display:inline;}
-.flexy-grid tr.flexy-grid-selected .action-select span.flexy-grid-unselected {display:none;}
-.flexy-grid tr.flexy-grid-selected .action-select span.flexy-grid-selected {display:inline;}
+.flexy-grid tr.st-selected .action-select span.flexy-grid-unselected {display:none;}
+.flexy-grid tr.st-selected .action-select span.flexy-grid-selected {display:inline;}
 
 
 /* tree, branches & nodes */
