--- a/sys/__test/less/flexy-grid.less
+++ b/sys/__test/less/flexy-grid.less
@@ -5,9 +5,23 @@
 .flexy-grid .panel-heading input {padding-left:30px;}
 .flexy-grid .panel-heading .glyphicon {left:0;}
 .flexy-grid .panel-content {padding:0;}
+
 /* Scrollable table (panel) */
 .flexy-grid .panel-content {overflow:auto;}
 .flexy-grid table {margin:0;}
+.flexy-grid tfoot {height:45px;width:100%;}
+.flexy-grid tfoot tr td {
+  position:absolute;
+  display:inline-block;
+  overflow:visible;
+  border:none;
+}
+.flexy-grid tfoot tr td>div {width:10000%;}
+.flexy-grid .flexy-grid-pagination {float:left;margin:0;}
+.flexy-grid .flexy-grid-stats {float:left;padding:7px 14px;}
+/* pagination */
+.flexy-grid .pagination {margin:0px;}
+
 /* th */
 .flexy-grid th {text-transform:uppercase;}
 .flexy-grid th>span.glyphicon {display:none;}
@@ -16,10 +30,11 @@
 /* td: fixed-height */
 .flexy-grid tbody td {white-space:nowrap;}
 .flexy-grid tbody td[tr-ng-grid-body-cell=0] {position:fixed;}
-/*  pagination */
-.flexy-grid .panel-footer {padding:2px;height:39px;}
-.flexy-grid .pagination {margin:0;}
-.flexy-grid .table-stats {float:right;padding:7px 14px;}
+
+/*  pagination / info*/
+// .flexy-grid .panel-footer {padding:2px;height:39px;}
+// .flexy-grid .pagination {margin:0;}
+// .flexy-grid .table-stats {float:right;padding:7px 14px;}
 
 /* TABLE COLUMNS */
 .flexy-grid th, .flexy-grid td {max-width:200px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;background-repeat:no-repeat;}
