--- a/sys/__test/less/flexy-main.less
+++ b/sys/__test/less/flexy-main.less
@@ -12,7 +12,10 @@
 a {outline:none!important;}
 
 /* BODY: paddings for fixed header/footer */
-body {padding:(@flexy-header-height + @flexy-margins) 0;}
+body {
+  padding:(@flexy-header-height + @flexy-margins) 0;
+  overflow-x:hidden;
+}
 
 #debug {margin:15px 15px 30px;}
 #debug .panel-content * {font-size:1.35rem;}
