- NEW: pagination in panel footer and search in panel header
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3033 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 4b0ec5a625fdf7e0af5322d5d8ce3235a9ad9234
Former-commit-id: 760a1d269f51fb868f23f921158a12f0b7f8dcf3
Former-commit-id: eddc3985bf1f26208c30cfe0d487946dc2bc9695

--- a/sys/__test/less/flexy-grid.less
+++ b/sys/__test/less/flexy-grid.less
@@ -9,18 +9,24 @@
 /* Scrollable table (panel) */
 .flexy-grid .panel-content {overflow:auto;}
 .flexy-grid table {margin:0;}
-.flexy-grid tfoot {height:45px;width:100%;}
-.flexy-grid tfoot tr td {
-  position:absolute;
-  display:inline-block;
-  overflow:visible;
-  border:none;
-}
-.flexy-grid tfoot tr td>div {width:10000%;}
-.flexy-grid .flexy-grid-pagination {float:left;margin:0;}
-.flexy-grid .flexy-grid-stats {float:left;padding:7px 14px;}
-/* pagination */
-.flexy-grid .pagination {margin:0px;}
+// .flexy-grid tfoot {height:51px;width:100%;}
+// .flexy-grid tfoot tr td {
+//   padding:0;
+//   position:absolute;
+//   display:inline-block;
+//   overflow:visible;
+//   border:none;
+// }
+// .flexy-grid tfoot tr td>div {
+//   width:10000%;
+//   height:51px;
+//   padding:@table-cell-padding;
+//   // background-color:@panel-footer-bg;
+// }
+// .flexy-grid .flexy-grid-pagination {float:left;margin:0;}
+// .flexy-grid .flexy-grid-stats {float:left;padding:7px 14px;}
+// /* pagination */
+// .flexy-grid .pagination {margin:0px;}
 
 /* th */
 .flexy-grid th {text-transform:uppercase;}
@@ -32,9 +38,10 @@
 .flexy-grid tbody td[tr-ng-grid-body-cell=0] {position:fixed;}
 
 /*  pagination / info*/
-// .flexy-grid .panel-footer {padding:2px;height:39px;}
-// .flexy-grid .pagination {margin:0;}
-// .flexy-grid .table-stats {float:right;padding:7px 14px;}
+.flexy-grid .panel-footer {padding:2px;height:39px;}
+.flexy-grid .flexy-grid-pagination {float:left;}
+.flexy-grid .pagination {margin:0;}
+.flexy-grid .flexy-grid-stats {float:right;padding:7px 14px;}
 
 /* TABLE COLUMNS */
 .flexy-grid th, .flexy-grid td {max-width:200px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;background-repeat:no-repeat;}
