- NEW: flexy-grid sortable better code
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3040 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 58ca434b1dac488160ca0373d53a209b100ca1b0
Former-commit-id: 875c4118d3cde9af2a5cf11f2f803da57999c556
Former-commit-id: 79db8a78584bc9fefa1e71b983e164106f8a633a

--- a/sys/__test/less/flexy-grid.less
+++ b/sys/__test/less/flexy-grid.less
@@ -77,7 +77,7 @@
 /* ng-sortable */
 .as-sortable-drag {
   overflow:hidden;
-  border:1px solid @brand-primary;
+  border:1px dotted @brand-primary;
   background-color:@gray-lighter;
 }
 .as-sortable-drag td {
