- BUG: styling of pagination in grid
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3060 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: b149a3284635509a4d426558039aba5463a35a67
Former-commit-id: 664046f8cd94768996d811ae7826289acdeb03ef
Former-commit-id: fa14eb4f58703ab1a30553d49f3c59297b4bc729

--- a/sys/flexyadmin/assets/css/admin_main.css
+++ b/sys/flexyadmin/assets/css/admin_main.css
@@ -842,7 +842,7 @@ table.files thead .edit {
 tfoot tr.pagination td {padding:10px;background-color:#DEA;background-image: url("../img/inset.png");background-position: 50% 50%;text-align:center;}
 tfoot tr.pagination * {padding:0px 2px;font-size:14px;}
 tfoot tr.pagination li {display:inline;}
-tfoot tr.pagination li.current {font-weight:bold;}
+tfoot tr.pagination li.active {font-weight:bold;}
 tfoot tr.pagination .pagination_total {float:right;}
 
 /* ============== filemanager ================== */
